# SpiriSynq

./: .gitignore  CHANGES.md  README.md  flake.nix  pyproject.toml
.github/workflows/: publish.yml
SpiriSynq/: cli.py  codecs.py  remote_callables.py  schema.py  serializer.py  session.py  session_logger.py  session_old.py  shutdown.py  syncable_objects.py
SpiriSynq/example_types/: position.py  robot.py
SpiriVector/: cli.py  session.py
docs/: Makefile  cli.md  concepts.md  conf.py  getting_started.md  index.rst  overview.md  protocol.md
docs/api/: example_types.rst  index.rst  remote_callables.rst  schema.rst  session.rst  syncable_objects.rst
examples/: position.py  timeserver.py
tests/: conftest.py  test_cli.py  test_performance.py  test_register_types.py  test_remote_callables.py  test_schema.py  test_session.py  test_syncable_objects.py
