[project]
name = "spirivector"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "eclipse-zenoh>=1.8.0",
    "loguru>=0.7.3",
    "psygnal>=0.15.1",
    "rich>=14.3.3",
    "ruamel-yaml>=0.19.1",
    "ruamel-yaml-string>=0.1.1",
    "typer>=0.24.1",
]
