[project]
name = "SpiriSynq"
version = "0.1.2"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "deepdiff>=9.0.0",
    "eclipse-zenoh>=1.8.0",
    "loguru>=0.7.3",
    "psygnal>=0.15.1",
    "rich>=14.3.3",
    "pyyaml>=6.0",
    "typer>=0.24.1",
]

[project.optional-dependencies]
docs = [
    "sphinx>=8.0",
    "sphinx-rtd-theme>=3.0",
    "myst-parser>=4.0",
    "autodoc-pydantic>=2.0",
]

[dependency-groups]
dev = [
    "objgraph>=3.6.2",
    "pytest>=9.0.2",
    "pytest-benchmark>=5.2.3",
    "pytest-cov>=7.1.0",
]
examples = [
    "imagecodecs>=2026.3.6",
    "nicegui>=3.9.0",
    "opencv-python-headless>=4.13.0.92",
]

[project.scripts]
synq = "SpiriSynq.cli:app"
spirisynq = "SpiriSynq.cli:app"

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.coverage.run]
concurrency = ["thread"]
